2008-07-11  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (CloseWindowClientSelection, WindowClientSelection)
	(SeleccionarCliente, SelectClient, AddDataEmisor, CancelarTipo):
	Deleted functions.

2008-07-10  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c (clean_container): Fixed bug that was deleting labels of
	any widget inside a container even those inside a stock button or
	radio button.

2008-07-09  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_button_new_product_clicked): Move
	clean_container() at the begging so we clean and then set the text.
	(on_btn_get_request_clicked): Added function.
	(on_btn_nullify_buy_clicked): Added as handler to btn_nullify_buy.
	(ChangeSave): Deleted function.
	(CloseSearchByName): Deleted function.
	(CloseSelectProveedores): Deleted function.
	(Ingresar): Deleted function.
	(RemoveBuyProduct): Deleted function.
	(on_button_ok_ingress_clicked): Added clean_container() to all the
	windows called by this function.

	* postgres-functions.c (IngresarProducto): Fix possible bug that
	can produce a bad calculation when try to get how many products
	where interchanged.

2008-07-08  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (CloseProductDescription): Deleted function.
	(ModificarProducto): Added paramater widget_barcode to get the barcode
	from that widget.

	* compras.c (AddProveedor): To check if a provider exists we just
	use "rut" without the verify digit.

2008-07-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* caja.c (caja_get_last_amount): Make sure that we have something
	to get from the last SQL excecuted.

	* rizoma-config.c (on_page_change): Deleted the code that set to
	TRUE the complete state of page four.

2008-07-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (on_btn_conneciton_test_clicked): Created to
	test connection.

2008-07-04  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (on_btn_credit_sale_clicked): Replaced g_strsplit() for